clean project from Template
